--- a/src/form-message.html
+++ b/src/form-message.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
@@ -11,25 +12,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/form-message.css" />
   </head>
-
   <body>
     <div class="container">
-      <ol class="navigation">
-        <li class="navigation__item">
-          <a href="./contact-form.html" class="navigation__link"
-            >Форма зворотнього зв'язку</a
-          >
-        </li>
-      </ol>
+      <p>Value from localStorage: <span id="output"></span></p>
 
-      <ol class="navigation">
-        <li class="navigation__item">
-          <a href="./form-message.html" class="navigation__link">
-            Відправка повідомлення
-          </a>
-        </li>
-      </ol>
+      <form id="message-form">
+        <input type="text" class="input" name="message" />
+        <button type="submit" class="btn">Save</button>
+      </form>
     </div>
+    <script src="./js/form-message.js"></script>
   </body>
 </html>
