--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Заголовок страницы</title>
   </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
 
-    <script type="module" src="./index.js"></script>
+  <body>
+    <script type="module" src="./js/get.js"></script>
+    <!-- <script type="module" src="./js/post.js"></script> -->
+    <!-- <script type="module" src="./js/put-patch.js"></script> -->
+    <!-- <script type="module" src="./js/delete.js"></script> -->
   </body>
 </html>
