--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 
   <body>
     <script type="module" src="./js/get.js"></script>
-    <script type="module" src="./js/post.js"></script>
-    <script type="module" src="./js/put-patch.js"></script>
+    <!--  <script type="module" src="./js/post.js"></script>
+    <script type="module" src="./js/put-patch.js"></script> -->
     <!-- <script type="module" src="./js/delete.js"></script> -->
   </body>
 </html>
